<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/detail_layout_mean"
                android:text="@string/detail_name"/>
            <TextView
                android:id="@+id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/detail_layout_value"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/detail_layout_mean"
                android:text="@string/detail_about"/>
            <TextView
                android:id="@+id/detail_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/detail_layout_value"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/detail_layout_mean"
                android:text="@string/detail_owner"/>
            <TextView
                android:id="@+id/detail_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/detail_layout_value"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/detail_layout_mean"
                android:text="@string/detail_category"/>
            <TextView
                android:id="@+id/detail_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/detail_layout_value"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/detail_layout_mean"
                android:text="@string/detail_add_date"/>
            <TextView
                android:id="@+id/detail_add_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/detail_layout_value"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/detail_layout_mean"
                android:text="@string/detail_mod_date"/>
            <TextView
                android:id="@+id/detail_mod_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/detail_layout_value"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_call"
                android:foreground="#ffffffff"
                android:layout_marginRight="5dp"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:id="@+id/detail_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_dialog_email"
                android:foreground="#ffffffff"
                android:layout_marginRight="5dp"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:id="@+id/detail_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="downloadOnClick"
                android:id="@+id/detail_download"
                android:text="@string/load"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="lookOnClick"
                android:id="@+id/detail_look"
                android:text="@string/look_data"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
